some minor changes

--- a/adminHomePage.html
+++ b/adminHomePage.html
@@ -55,7 +55,7 @@
                     const capitalizedUsername = user.fullName.toUpperCase();
                     document.getElementById('userName').innerText = `Welcome, ${capitalizedUsername}`;
                 } else {
-                    window.location.href = 'userHomePage.html';
+                    window.location.href = 'index.html';
                 }
                 
             });
