--- a/paymentPage.html
+++ b/paymentPage.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <a href="userHomePage.html">BACK TO HOME</a>
+    <a href="index.html">BACK TO HOME</a>
     <div>
        <center> <img src="./images/PngItem_2708391.png"></center>
     </div>
